--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </a>
               </div>
               <div class="main__coeur">
-                <a href="#">
+                <a>
                   <div class="empty"><i class="far fa-heart"></i></div>
                   <div class="full"><i class="fas fa-heart"></i></div>
                 </a>
@@ -92,7 +92,7 @@
                 </a>
               </div>
               <div class="main__coeur">
-                <a href="#">
+                <a >
                   <div class="empty"><i class="far fa-heart"></i></div>
                   <div class="full"><i class="fas fa-heart"></i></div>
                 </a>
@@ -110,7 +110,7 @@
                 </a>
               </div>
               <div class="main__coeur">
-                <a href="#">
+                <a >
                   <div class="empty"><i class="far fa-heart"></i></div>
                   <div class="full"><i class="fas fa-heart"></i></div>
                 </a>
@@ -128,7 +128,7 @@
                 </a>
               </div>
               <div class="main__coeur">
-                <a href="#">
+                <a >
                   <div class="empty"><i class="far fa-heart"></i></div>
                   <div class="full"><i class="fas fa-heart"></i></div>
                 </a>
@@ -143,13 +143,13 @@
         <div class="footer__list">
           <div>
             <div class="footer__icon"><i class="fas fa-utensils"></i></div>
-            <a href="#">Proposer un restaurant</a>
+            <a >Proposer un restaurant</a>
           </div>
           <div>
             <div class="footer__icon"><i class="fas fa-hands-helping iconwidth"></i></div>
-            <a href="#">Devenir partenaire</a>
+            <a >Devenir partenaire</a>
           </div>
-          <a href="#">Mentions légales</a>
+          <a >Mentions légales</a>
           <a href="mailto:contact@ohmyfood.com">Contact</a>
         </div>
       </footer>
