--- a/menu.html
+++ b/menu.html
@@ -29,7 +29,7 @@
       <main class="main">
         <div class="main__resto">
           <h1>Restaurant</h1>
-          <a href="#" class="main__coeur">
+          <a  class="main__coeur">
             <div class="empty"><i class="far fa-heart"></i></div>
             <div class="full"><i class="fas fa-heart"></i></div>
           </a>
@@ -48,7 +48,7 @@
                 <p class="main__prix">25€</p>
 
                 <div class="main__check">
-                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                  <a ><i class="main__icon fas fa-check-circle"></i></a>
                 </div>
               </div>
 
@@ -61,7 +61,7 @@
                 <p class="main__prix">25€</p>
 
                 <div class="main__check">
-                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                  <a ><i class="main__icon fas fa-check-circle"></i></a>
                 </div>
               </div>
 
@@ -74,7 +74,7 @@
                 <p class="main__prix">25€</p>
 
                 <div class="main__check">
-                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                  <a ><i class="main__icon fas fa-check-circle"></i></a>
                 </div>
               </div>
             </div>
@@ -93,7 +93,7 @@
                 <p class="main__prix">25€</p>
 
                 <div class="main__check">
-                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                  <a ><i class="main__icon fas fa-check-circle"></i></a>
                 </div>
               </div>
 
@@ -106,7 +106,7 @@
                 <p class="main__prix">25€</p>
 
                 <div class="main__check">
-                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                  <a ><i class="main__icon fas fa-check-circle"></i></a>
                 </div>
               </div>
 
@@ -119,7 +119,7 @@
                 <p class="main__prix">25€</p>
 
                 <div class="main__check">
-                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                  <a ><i class="main__icon fas fa-check-circle"></i></a>
                 </div>
               </div>
             </div>
@@ -138,7 +138,7 @@
                 <p class="main__prix">25€</p>
 
                 <div class="main__check">
-                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                  <a ><i class="main__icon fas fa-check-circle"></i></a>
                 </div>
               </div>
 
@@ -151,7 +151,7 @@
                 <p class="main__prix">25€</p>
 
                 <div class="main__check">
-                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                  <a ><i class="main__icon fas fa-check-circle"></i></a>
                 </div>
               </div>
 
@@ -164,7 +164,7 @@
                 <p class="main__prix">25€</p>
 
                 <div class="main__check">
-                  <a href="#"><i class="main__icon fas fa-check-circle"></i></a>
+                  <a ><i class="main__icon fas fa-check-circle"></i></a>
                 </div>
               </div>
             </div>
@@ -178,13 +178,13 @@
         <div class="footer__list">
           <div>
             <div class="footer__icon"><i class="fas fa-utensils"></i></div>
-            <a href="#">Proposer un restaurant</a>
+            <a >Proposer un restaurant</a>
           </div>
           <div>
             <div class="footer__icon"><i class="fas fa-hands-helping iconwidth"></i></div>
-            <a href="#">Devenir partenaire</a>
+            <a >Devenir partenaire</a>
           </div>
-          <a href="#">Mentions légales</a>
+          <a >Mentions légales</a>
           <a href="mailto:contact@ohmyfood.com">Contact</a>
         </div>
       </footer>
